lib/bindings/native_audio_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// SoundTouch, Demucs library bindings
class NativeAudioBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeAudioBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeAudioBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  late final ffi.Pointer<ffi.UintPtr> ___security_cookie = _lookup<ffi.UintPtr>(
    '__security_cookie',
  );

  int get __security_cookie => ___security_cookie.value;

  set __security_cookie(int value) => ___security_cookie.value = value;

  handle soundtouch_create() {
    return _soundtouch_create();
  }

  late final _soundtouch_createPtr =
      _lookup<ffi.NativeFunction<handle Function()>>('soundtouch_create');
  late final _soundtouch_create = _soundtouch_createPtr
      .asFunction<handle Function()>();

  void soundtouch_set_settings(
    handle handle$1,
    int sampleRate,
    int channels,
    double pitch,
    double tempo,
  ) {
    return _soundtouch_set_settings(
      handle$1,
      sampleRate,
      channels,
      pitch,
      tempo,
    );
  }

  late final _soundtouch_set_settingsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(handle, ffi.Int32, ffi.Int32, ffi.Float, ffi.Float)
        >
      >('soundtouch_set_settings');
  late final _soundtouch_set_settings = _soundtouch_set_settingsPtr
      .asFunction<void Function(handle, int, int, double, double)>();

  void soundtouch_put_samples(
    handle handle$1,
    ffi.Pointer<ffi.Float> samples,
    int numSamples,
  ) {
    return _soundtouch_put_samples(handle$1, samples, numSamples);
  }

  late final _soundtouch_put_samplesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(handle, ffi.Pointer<ffi.Float>, ffi.Int32)
        >
      >('soundtouch_put_samples');
  late final _soundtouch_put_samples = _soundtouch_put_samplesPtr
      .asFunction<void Function(handle, ffi.Pointer<ffi.Float>, int)>();

  int soundtouch_receive_samples(
    handle handle$1,
    ffi.Pointer<ffi.Float> outputBuffer,
    int maxSamples,
  ) {
    return _soundtouch_receive_samples(handle$1, outputBuffer, maxSamples);
  }

  late final _soundtouch_receive_samplesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(handle, ffi.Pointer<ffi.Float>, ffi.Int32)
        >
      >('soundtouch_receive_samples');
  late final _soundtouch_receive_samples = _soundtouch_receive_samplesPtr
      .asFunction<int Function(handle, ffi.Pointer<ffi.Float>, int)>();

  void soundtouch_destroy(handle handle$1) {
    return _soundtouch_destroy(handle$1);
  }

  late final _soundtouch_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(handle)>>(
        'soundtouch_destroy',
      );
  late final _soundtouch_destroy = _soundtouch_destroyPtr
      .asFunction<void Function(handle)>();

  LoadResult demucs_load_model(
    ffi.Pointer<ffi.Char> htdemucs_model_path,
    int intraNumThreads,
    int interNumThreads,
  ) {
    return _demucs_load_model(
      htdemucs_model_path,
      intraNumThreads,
      interNumThreads,
    );
  }

  late final _demucs_load_modelPtr =
      _lookup<
        ffi.NativeFunction<
          LoadResult Function(ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Int32)
        >
      >('demucs_load_model');
  late final _demucs_load_model = _demucs_load_modelPtr
      .asFunction<LoadResult Function(ffi.Pointer<ffi.Char>, int, int)>();
}

typedef va_list = ffi.Pointer<ffi.Char>;
typedef ptrdiff_t = ffi.LongLong;
typedef Dartptrdiff_t = int;
typedef int_least8_t = ffi.SignedChar;
typedef Dartint_least8_t = int;
typedef int_least16_t = ffi.Short;
typedef Dartint_least16_t = int;
typedef int_least32_t = ffi.Int;
typedef Dartint_least32_t = int;
typedef int_least64_t = ffi.LongLong;
typedef Dartint_least64_t = int;
typedef uint_least8_t = ffi.UnsignedChar;
typedef Dartuint_least8_t = int;
typedef uint_least16_t = ffi.UnsignedShort;
typedef Dartuint_least16_t = int;
typedef uint_least32_t = ffi.UnsignedInt;
typedef Dartuint_least32_t = int;
typedef uint_least64_t = ffi.UnsignedLongLong;
typedef Dartuint_least64_t = int;
typedef int_fast8_t = ffi.SignedChar;
typedef Dartint_fast8_t = int;
typedef int_fast16_t = ffi.Int;
typedef Dartint_fast16_t = int;
typedef int_fast32_t = ffi.Int;
typedef Dartint_fast32_t = int;
typedef int_fast64_t = ffi.LongLong;
typedef Dartint_fast64_t = int;
typedef uint_fast8_t = ffi.UnsignedChar;
typedef Dartuint_fast8_t = int;
typedef uint_fast16_t = ffi.UnsignedInt;
typedef Dartuint_fast16_t = int;
typedef uint_fast32_t = ffi.UnsignedInt;
typedef Dartuint_fast32_t = int;
typedef uint_fast64_t = ffi.UnsignedLongLong;
typedef Dartuint_fast64_t = int;
typedef intmax_t = ffi.LongLong;
typedef Dartintmax_t = int;
typedef uintmax_t = ffi.UnsignedLongLong;
typedef Dartuintmax_t = int;
typedef handle = ffi.Pointer<ffi.Void>;

final class LoadResult extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;

  @ffi.Bool()
  external bool success;
}

const int _VCRT_COMPILER_PREPROCESSOR = 1;

const int _SAL_VERSION = 20;

const int __SAL_H_VERSION = 180000000;

const int _USE_DECLSPECS_FOR_SAL = 0;

const int _USE_ATTRIBUTES_FOR_SAL = 0;

const int _CRT_PACKING = 8;

const int _VCRUNTIME_DISABLED_WARNINGS = 4514;

const int _HAS_EXCEPTIONS = 1;

const int _WCHAR_T_DEFINED = 1;

const int NULL = 0;

const int _HAS_CXX17 = 0;

const int _HAS_CXX20 = 0;

const int _HAS_CXX23 = 0;

const int _HAS_CXX26 = 0;

const int _HAS_NODISCARD = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -2147483648;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 2147483647;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 4294967295;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int WCHAR_MIN = 0;

const int WCHAR_MAX = 65535;

const int WINT_MIN = 0;

const int WINT_MAX = 65535;

const int __bool_true_false_are_defined = 1;

const int false$ = 0;

const int true$ = 1;
